# windsurf

./: README.md  com.github.fluxxen.windsurf.yml  meson.build
.github/workflows/: main.yml
data/: windsurf.desktop  windsurf.desktop.in  windsurf.metainfo.xml  windsurf.metainfo.xml.in
po/: POTFILES  com.github.fluxxen.windsurf.pot  de.po  es.po
src/: Application.vala
